--- a/listPhotos.html
+++ b/listPhotos.html
@@ -85,7 +85,7 @@
 			<div class="fh5co-narrow-content">
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h1 class="fh5co-heading-colored">DataBase List</h1>
+						<h1 class="fh5co-heading">DataBase List</h1>
 					</div>
 				</div>
 				<div class="fh5co-gallery animate-box" data-animate-effect="fadeInLeft">
