--- a/search.html
+++ b/search.html
@@ -149,11 +149,6 @@
 							 <span class="fa fa-upload"></span>
 							</span>
 						</label>
-						<button type="button" class="btn btn-primary" data-method="destroy" title="Destroy">
-							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;destroy&quot;)">
-							  <span class="fa fa-power-off"></span>
-							</span>
-						</button>
 					</div>
 				</div>
 				<div class="row" style="margin-top: 20px;text-align: center">
@@ -165,7 +160,7 @@
 				</div>
 				<!-- Show the cropped image in modal -->
 				<div class="modal fade docs-cropped" id="getCroppedCanvasModal" aria-hidden="true" aria-labelledby="getCroppedCanvasTitle" role="dialog" tabindex="-1">
-					<div class="modal-dialog">
+					<div class="modal-dialog" role="document">
 						<div class="modal-content">
 							<div class="modal-header">
 								<h5 class="modal-title" id="getCroppedCanvasTitle">Cropped</h5>
