--- a/search.html
+++ b/search.html
@@ -113,27 +113,27 @@
 
 					<div class="btn-group">
 						<button type="button" class="btn btn-primary" data-method="zoom" data-option="0.1" title="Zoom In">
-				<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;zoom&quot;, 0.1)">
-				  <span class="fa fa-search-plus"></span>
-				</span>
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;zoom&quot;, 0.1)">
+							  <span class="fa fa-search-plus"></span>
+							</span>
 						</button>
 						<button type="button" class="btn btn-primary" data-method="zoom" data-option="-0.1" title="Zoom Out">
-				<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;zoom&quot;, -0.1)">
-				  <span class="fa fa-search-minus"></span>
-				</span>
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;zoom&quot;, -0.1)">
+							  <span class="fa fa-search-minus"></span>
+							</span>
 						</button>
 					</div>
 
 					<div class="btn-group">
 						<button type="button" class="btn btn-primary" data-method="crop" title="Crop">
-				<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;crop&quot;)">
-				  <span class="fa fa-check"></span>
-				</span>
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;crop&quot;)">
+							  <span class="fa fa-check"></span>
+							</span>
 						</button>
 						<button type="button" class="btn btn-primary" data-method="clear" title="Clear">
-				<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;clear&quot;)">
-				  <span class="fa fa-remove"></span>
-				</span>
+							<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;clear&quot;)">
+							  <span class="fa fa-remove"></span>
+							</span>
 						</button>
 					</div>
 
@@ -154,28 +154,11 @@
 				<div class="row" style="margin-top: 20px;text-align: center">
 					<button type="button" class="btn btn-primary btn-outline" data-method="getCroppedCanvas">
 						<span class="docs-tooltip" data-toggle="tooltip" data-animation="false" title="" data-original-title="$().cropper(&quot;getCroppedCanvas&quot;)">
-						  Get Cropped Picture and Search
+						  Get Cropped Picture
 						</span>
 					</button>
 				</div>
-				<!-- Show the cropped image in modal -->
-				<div class="modal fade docs-cropped" id="getCroppedCanvasModal" aria-hidden="true" aria-labelledby="getCroppedCanvasTitle" role="dialog" tabindex="-1">
-					<div class="modal-dialog" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title" id="getCroppedCanvasTitle">Cropped</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">×</span>
-								</button>
-							</div>
-							<div class="modal-body"></div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-								<a class="btn btn-primary" id="download" href="javascript:void(0);" download="cropped.jpg">Download</a>
-							</div>
-						</div>
-					</div>
-				</div><!-- /.modal -->
+
 			</div>
 		</div>
 
@@ -189,6 +172,31 @@
 		</div>
 
 	</div>
+	<!-- Show the cropped image in modal -->
+	<div class="modal fade docs-cropped" id="getCroppedCanvasModal" aria-hidden="true" aria-labelledby="getCroppedCanvasTitle" role="dialog" tabindex="-1">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+
+				<div class="modal-header">
+					<h5 class="modal-title" id="getCroppedCanvasTitle">Cropped</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<input type="hidden" class="avatar-src" id="crop-pic" name="crop-picture">
+				<div class="modal-body" id="modal-con" style="text-align: center"></div>
+				<div class="modal-footer">
+					<div class="btn-group">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<!--<a class="btn btn-primary" id="download" href="javascript:void(0);" download="cropped.jpg">Download</a>-->
+					<button type="button" id="search-btn" class="btn btn-secondary" style="background: #7ac143;color: #fff">Search</button>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div><!-- /.modal -->
+
 </div>
 
 <!-- jQuery -->
