--- a/search.html
+++ b/search.html
@@ -46,6 +46,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/cropper.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/loading.css">
+	<link rel="stylesheet" href="css/viewer.min.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -87,7 +89,7 @@
 
 
 
-		<div class="fh5co-narrow-content animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft">
+		<div id="searche-target" class="fh5co-narrow-content animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft">
 			<div class="row">
 				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<h1 class="fh5co-heading">Search Images</h1>
@@ -163,10 +165,24 @@
 		</div>
 
 
-		<div class="fh5co-narrow-content">
+		<div id="searche-result" class="fh5co-narrow-content" style="display: none">
 			<div class="row">
 				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<h1 class="fh5co-heading-colored">Results</h1>
+					<div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+				<ul id="mytest">
+
+					<li><img src="./images/work_1.jpg" alt="图片1"></li>
+					<li><img src="./images/work_2.jpg" alt="图片2"></li>
+					<li><img src="./images/work_3.jpg" alt="图片3"></li>
+					<li><img src="./images/work_4.jpg" alt="图片4"></li>
+					<li><img src="./images/work_5.jpg" alt="图片5"></li>
+					<li><img src="./images/work.jpg" alt="图片6"></li>
+				</ul>
 				</div>
 			</div>
 		</div>
@@ -176,7 +192,6 @@
 	<div class="modal fade docs-cropped" id="getCroppedCanvasModal" aria-hidden="true" aria-labelledby="getCroppedCanvasTitle" role="dialog" tabindex="-1">
 		<div class="modal-dialog modal-lg" role="document">
 			<div class="modal-content">
-
 				<div class="modal-header">
 					<h5 class="modal-title" id="getCroppedCanvasTitle">Cropped</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -215,6 +230,7 @@
 <script src="js/jquery.countTo.js"></script>
 
 <script src="js/cropper.js"></script>
+<script src="js/viewer-jquery.min.js"></script>
 <!-- MAIN JS -->
 
 <script src="js/main.js"></script>
