--- a/search.html
+++ b/search.html
@@ -172,7 +172,7 @@
 		</div>
 
 
-		<div id="searche-result" class="fh5co-narrow-content" >
+		<div id="searche-result" class="fh5co-narrow-content" style="display:none;">
 			<div class="row">
 				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<h1 class="fh5co-heading-colored">Results</h1>
