js change and shell

--- a/search.html
+++ b/search.html
@@ -104,7 +104,7 @@
 			</div>
 			<div class="docs-buttons" >
 				<div class="row" style="margin-top: 20px">
-					<img style="max-width: 100%" id="image" src="images/person1.jpg">
+					<img style="max-width: 100%" id="image" src="images/origin_img.jpg">
 				</div>
 				<div class="row" style="margin-top: 20px;text-align: center">
 					<div class="btn-group">
