search js html changes

--- a/search.html
+++ b/search.html
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 			<div class="docs-buttons" >
-				<div class="row" style="margin-top: 20px">
+				<div class="row" style="margin-top: 20px ;height: 600px;">
 					<img style="max-width: 100%" id="image" src="images/origin_img.jpg">
 				</div>
 				<div class="row" style="margin-top: 20px;text-align: center">
@@ -176,11 +176,6 @@
 			<div class="row">
 				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<h1 class="fh5co-heading-colored">Results</h1>
-
-
-				</div>
-				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft"></div>
-				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<div class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
 				</div>
 			</div>
