--- a/search.html
+++ b/search.html
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 			<div class="docs-buttons" >
-				<div class="row" style="margin-top: 20px">
+				<div class="row" style="margin-top: 20px;height: 600px">
 					<img style="max-width: 100%" id="image" src="images/back.jpg">
 				</div>
 				<div class="row" style="margin-top: 20px;text-align: center">
