--- a/search.html
+++ b/search.html
@@ -173,6 +173,15 @@
 
 
 		<div id="searche-result" class="fh5co-narrow-content" style="display:none;">
+			<div class="row"  data-animate-effect="fadeInLeft">
+				<h1 class="fh5co-heading-colored">Origin Picture:</h1>
+				<div id="origin-img-dis"  class="col-sm-12 animate-box" data-animate-effect="fadeInLeft" style="text-align: center">
+					<ul id="myorigin" >
+						<li id="li_origin" style="list-style-type:none;">
+						</li>
+					</ul>
+				</div>
+			</div>
 			<div class="row">
 				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<h1 class="fh5co-heading-colored">Results</h1>
@@ -184,14 +193,7 @@
 
 				</div>
 			</div>
-			<div class="row"  data-animate-effect="fadeInLeft">
-				<div id="origin-img-dis"  class="col-sm-12 animate-box" data-animate-effect="fadeInLeft" style="text-align: center">
-					<ul id="myorigin" >
-						<li id="li_origin" style="list-style-type:none;">
-						</li>
-					</ul>
-				</div>
-			</div>
+
 			<div class="row">
 				<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 				<ul id="mytest" class="imglist">
