--- a/search.html
+++ b/search.html
@@ -173,11 +173,12 @@
 
 
 		<div id="searche-result" class="fh5co-narrow-content" style="display:none;">
-			<div class="row"  data-animate-effect="fadeInLeft">
+			<div class="row animate-box"   data-animate-effect="fadeInLeft">
 				<h1 class="fh5co-heading-colored">Origin Picture:</h1>
 				<div id="origin-img-dis"  class="col-sm-12 animate-box" data-animate-effect="fadeInLeft" style="text-align: center">
 					<ul id="myorigin" >
 						<li id="li_origin" style="list-style-type:none;">
+
 						</li>
 					</ul>
 				</div>
