--- a/search.html
+++ b/search.html
@@ -176,7 +176,11 @@
 			<div class="row animate-box"   data-animate-effect="fadeInLeft">
 				<h1 class="fh5co-heading-colored">Origin Picture:</h1>
 				<div id="origin-img-dis"  class="col-sm-12 animate-box" data-animate-effect="fadeInLeft" style="text-align: center">
+					<ul id="myorigin" >
+						<li id="li_origin" style="list-style-type:none;">
 
+						</li>
+					</ul>
 				</div>
 			</div>
 			<div class="row">
