--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 			</nav>
 
 			<div class="fh5co-footer">
-				<p>Writer: Su LiHui</p>
-				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-				</ul>
+				<p>Copyright PKU</p>
+				<!--<ul>-->
+					<!--<li><a href="#"><i class="icon-facebook"></i></a></li>-->
+					<!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
+					<!--<li><a href="#"><i class="icon-instagram"></i></a></li>-->
+					<!--<li><a href="#"><i class="icon-linkedin"></i></a></li>-->
+				<!--</ul>-->
 			</div>
 
 		</aside>
