--- a/upload.html
+++ b/upload.html
@@ -72,14 +72,15 @@
 				</ul>
 			</nav>
 
+
 			<div class="fh5co-footer">
-				<p>Writer: Su LiHui</p>
-				<ul>
-					<li><a href="#"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-instagram"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-				</ul>
+				<p>Copyright PKU</p>
+				<!--<ul>-->
+				<!--<li><a href="#"><i class="icon-facebook"></i></a></li>-->
+				<!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
+				<!--<li><a href="#"><i class="icon-instagram"></i></a></li>-->
+				<!--<li><a href="#"><i class="icon-linkedin"></i></a></li>-->
+				<!--</ul>-->
 			</div>
 
 		</aside>
