--- a/search.html
+++ b/search.html
@@ -211,13 +211,15 @@
 					</div>
 				</div>
 				<div class="row" style="margin-top: 20px;height: 500px;text-align: center">
-					<img style="max-width: 100%" id="image-detect" src="">
+					<img style="max-width: 100%" id="image-detect" width="300" height="300" src="">
 				</div>
 				<!-- picture picked -->
-				<div  class="col-md-12 animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft" style="text-align: center">
-					<select id="detect_pic" class="image-picker show-html" style="margin-bottom: 20px">
+				<div class="row">
+					<div  class="col-md-12 animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft" style="text-align: center">
+						<select id="detect_pic" class="image-picker show-html" style="margin-bottom: 20px;display: none">
 
-					</select>
+						</select>
+					</div>
 				</div>
 				<div class="row"  style="text-align: center">
 					<button id="btn-submit" type="button" class="btn btn-primary btn-outline animate-box" data-animate-effect="fadeInLeft" style="margin-top: 30px">
