--- a/search.html
+++ b/search.html
@@ -100,13 +100,12 @@
 
 
 		<div id="searche-target" class="fh5co-narrow-content animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft">
-
+		   	<div id="show-main">
 			<div class="row">
 				<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
 					<h1 class="fh5co-heading">Search Images</h1>
 				</div>
 			</div>
-			<div id="show-main">
 
 			<div class="docs-buttons" >
 				<div class="row" style="margin-top: 20px;height: 500px;">
@@ -203,18 +202,24 @@
 				</div>
 			</div>
 
-			<div  id="pic-detect" class="row " style="margin-top: 20px;display: none" >
+			<div  id="pic-detect" class="animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;display: none" >
 				<div class="row">
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
-						<h2 >Detected Images</h2>
+						<h1 >Detected Images</h1>
 						<div id="detect-load" class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
 					</div>
 				</div>
-				<div class="row" style="margin-top: 20px;height: 500px;text-align: center">
-					<img style="max-width: 100%" id="image-detect" width="300" height="300" src="">
+				<div class="row fh5co-border-bottom animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;height: 300px;text-align: center">
+					<img style="max-height: 100%" id="image-detect" src="">
 				</div>
+				<div class="row animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;">
+                    <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
+                        <h3 >Choose a picture and search</h3>
+                        <div id="detect-load" class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
+                    </div>
+                </div>
 				<!-- picture picked -->
-				<div class="row">
+				<div class="row animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px">
 					<div  class="col-md-12 animate-box fh5co-border-bottom" data-animate-effect="fadeInLeft" style="text-align: center">
 						<select id="detect_pic" class="image-picker show-html" style="margin-bottom: 20px;display: none">
 
