--- a/search.html
+++ b/search.html
@@ -209,13 +209,13 @@
 						<div id="detect-load" class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
 					</div>
 				</div>
-				<div class="row fh5co-border-bottom animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;height: 300px;text-align: center">
+				<div class="row fh5co-border-bottom animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;margin-bottom:20px;height: 300px;text-align: center">
 					<img style="max-height: 100%" id="image-detect" src="">
 				</div>
 				<div class="row animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;">
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
                         <h3 >Choose a picture and search</h3>
-                        <div id="detect-load" class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
+                        <div id="detect-h2" class="loading" aria-label="Loading" role="img" tabindex="-1"></div>
                     </div>
                 </div>
 				<!-- picture picked -->
