--- a/search.html
+++ b/search.html
@@ -210,7 +210,7 @@
 					</div>
 				</div>
 				<div class="row fh5co-border-bottom animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;margin-bottom:20px;height: 300px;text-align: center">
-					<img style="max-height: 100%" id="image-detect" src="">
+					<img style="max-height: 100%;margin-bottom:20px;" id="image-detect" src="">
 				</div>
 				<div class="row animate-box" data-animate-effect="fadeInLeft" style="margin-top: 20px;">
                     <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
